# ast-grep

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  clippy.toml  flake.nix  package.nix  pyproject.toml  renovate.json  rust-toolchain  rust-toolchain.toml  sgconfig.yml
.cargo/: config.toml
benches/: .prettierrc  Cargo.toml  bench.ts  package.json  pnpm-lock.yaml  tsconfig.json
benches/fixtures/: json.wasm  python.wasm
benches/fixtures/rules/: has-rule.yml
benches/src/: core_benchmark.rs  sg_benchmark.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: completions.rs  config.rs  debug.rs  error.rs  guess_language.rs  interaction.rs  lang.rs  lib.rs  lsp.rs  main.rs  new.rs  outline.rs  playground.rs  print.rs  run.rs  scan.rs  style.rs  test.rs  transform.rs  utils.rs  verify.rs
crates/cli/src/lang/: alias_lang.rs  custom_lang.rs  injection.rs  lang_globs.rs  mod.rs
crates/cli/src/languages/: csharp.rs  mod.rs  python.rs  rust.rs
crates/cli/src/outline/: default_rule.rs  extract.rs  model.rs  options.rs  output.rs  rule.rs
crates/cli/src/print/: cloud_print.rs  colored_print.rs  file_name_printer.rs  interactive_print.rs  json_print.rs  mod.rs  sarif_print.rs
crates/cli/src/utils/: args.rs  debug_query.rs  diagnostic_count.rs  error_context.rs  inspect.rs  mod.rs  print_diff.rs  rule_overwrite.rs  tracing.rs  worker.rs
crates/cli/src/verify/: case_result.rs  find_file.rs  mod.rs  reporter.rs  snapshot.rs  test_case.rs
crates/cli/tests/: help_test.rs  playground_test.rs  run_test.rs  scan_test.rs  verify_test.rs
crates/cli/tests/common/: mod.rs
crates/config/: Cargo.toml
crates/config/benches/: scan_perf.rs
crates/config/src/: check_var.rs  combined.rs  config_rule.rs  constraints.rs  deserialize_env.rs  fixer.rs  label.rs  lib.rs  maybe.rs  referent_rule.rs  relational_rule.rs  rewriter.rs  rule.rs  rule_collection.rs  rule_config.rs  rule_core.rs  serialized_rule.rs  string_case.rs  string_conversion.rs  support_language.rs  transform.rs
crates/config/src/relational_rule/: mod.rs  stop_by.rs
crates/config/src/rule/: deserialize_env.rs  mod.rs  nth_child.rs  parameterized_util.rs  range.rs  referent_rule.rs  relational_rule.rs  selector.rs  stop_by.rs
crates/config/src/transform/: mod.rs  parse.rs  rewrite.rs  rewriters.rs  string_case.rs  trans.rs  transformation.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: search_perf.rs
crates/core/src/: kind_mask.rs  language.rs  lib.rs  match_tree.rs  matcher.rs  meta_var.rs  node.rs  ops.rs  pattern.rs  pinned.rs  replacer.rs  rule.rs  source.rs  traversal.rs  tree_sitter.rs  ts_parser.rs
crates/core/src/match_tree/: match_node.rs  mod.rs  strictness.rs
crates/core/src/matcher/: kind.rs  node_match.rs  pattern.rs  range.rs  supertype.rs  text.rs
crates/core/src/replacer/: indent.rs  structural.rs  template.rs
crates/core/src/tree_sitter/: mod.rs  traversal.rs
crates/dynamic/: Cargo.toml
crates/dynamic/src/: custom_lang.rs  lib.rs
crates/language/: Cargo.toml  README.md
crates/language/src/: bash.rs  cmake.rs  cpp.rs  csharp.rs  css.rs  dart.rs  dockerfile.rs  elixir.rs  erlang.rs  go.rs  haskell.rs  hcl.rs  html.rs  json.rs  kotlin.rs  lib.rs  lua.rs  markdown.rs  nix.rs  parsers.rs  php.rs  pug.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  solidity.rs  swift.rs  systemverilog.rs  toml.rs  yaml.rs
crates/language/src/parsers/: mod.rs  parsers_builtin.rs  parsers_napi.rs  parsers_none.rs  parsers_wasm.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  main.rs  utils.rs
crates/lsp/tests/: basic.rs  lsp_client.rs
crates/lsp/tests/lsp_client/: jsonrpc.rs  mod.rs
crates/napi/: .gitignore  .oxlintrc.json  Cargo.toml  README.md  biome.json  dprint.json  index.d.ts  index.js  manual.d.ts  package.json  tsconfig.json
crates/napi/__test__/: custom.spec.ts  index.spec.ts  test.vue  type.spec.ts
crates/napi/lang/: test.yml
crates/napi/npm/android-arm-eabi/: README.md  package.json
crates/napi/npm/android-arm64/: README.md  package.json
crates/napi/npm/darwin-arm64/: README.md  package.json
crates/napi/npm/darwin-x64/: README.md  package.json
crates/napi/npm/freebsd-x64/: README.md  package.json
crates/napi/npm/linux-arm-gnueabihf/: README.md  package.json
crates/napi/scripts/: cleanup.ts  constants.ts  generate-types.ts  generateTypes.ts  rules.ts  updateIndexDts.ts
crates/napi/src/: doc.rs  fe_lang.rs  file_types.rs  find_files.rs  lib.rs  napi_lang.rs  sg_node.rs
crates/napi/types/: .gitignore  api.d.ts  config.d.ts  deprecated.d.ts  lang.d.ts  node-types.d.ts  node-types.ts  registerDynamicLang.d.ts  rule.d.ts  sgnode.d.ts  staticTypes.d.ts
crates/outline/: Cargo.toml
crates/outline/src/: combined_extractor.rs  default_rule.rs  extractor.rs  lib.rs  model.rs  options.rs  rule.rs
crates/outline/tests/: c_family_outline_rules.rs  default_outline_rules.rs  javascript_outline_rules.rs  jvm_swift_outline_rules.rs  python_go_outline_rules.rs  ruby_php_outline_rules.rs  typescript_outline_rules.rs
crates/oxc/: Cargo.toml  test.ts
crates/oxc/src/: binding.rs  main.rs
crates/pyo3/: Cargo.toml  README.md  ast_grep_pyo3.pyi  pyproject.toml  test.py
crates/pyo3/ast_grep/: __init__.py
crates/pyo3/ast_grep_py/: __init__.py  ast_grep_py.pyi
crates/pyo3/ast_grep_pyo3/: __init__.py  ast_grep_pyo3.pyi
crates/pyo3/src/: lib.rs  py_lang.rs  py_node.rs  range.rs  unicode_position.rs
crates/pyo3/tests/: test_fix.py  test_range.py  test_register_lang.py  test_rule.py  test_simple.py  test_traversal.py  test_wrong_usage.py
crates/wasm/: Cargo.toml  README.md  build.sh  package.json  types.d.ts
crates/wasm/__test__/: index.spec.mjs
crates/wasm/scripts/: patch-pkg.mjs
crates/wasm/src/: config.rs  doc.rs  dump_tree.rs  lib.rs  sg_node.rs  ts_types.rs  types.rs  utils.rs  wasm_lang.rs  wasm_libc.rs
crates/wasm/tests/: setup.js  web.rs
crates/wasm/wasm-sysroot/: ctype.h  stdio.h  string.h  wctype.h
xtask/: Cargo.toml
xtask/src/: main.rs  schema.rs
(+158 files in other folders)
