[workspace]
members = [
  "crates/*",
  "xtask"
]
default-members = ["crates/*"]
resolver = "2"

[profile.release]
lto = true

[workspace.package]
version = "0.38.6"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
documentation = "https://ast-grep.github.io/guide/introduction.html"
homepage = "https://ast-grep.github.io/"
repository = "https://github.com/ast-grep/ast-grep"
rust-version = "1.70"
readme = "README.md"

[workspace.dependencies]
ast-grep-core = { path = "crates/core", version = "0.38.6", default-features = false }
ast-grep-config = { path = "crates/config", version = "0.38.6" }
ast-grep-dynamic = { path = "crates/dynamic", version = "0.38.6" }
ast-grep-language = { path = "crates/language", version = "0.38.6" }
ast-grep-lsp = { path = "crates/lsp", version = "0.38.6" }

bit-set = { version = "0.8.0" }
ignore = { version = "0.4.22" }
regex = { version = "1.10.4" }
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9.33"
tree-sitter = { version = "0.25.4" }
thiserror = "2.0.0"
schemars = "0.8.17"
anyhow = "1.0.82"
dashmap = "6.0.0"
