[package]
publish = false
name = "benches"
version = "0.4.1"
authors = ["Herrington Darkholme <2883231+HerringtonDarkholme@users.noreply.github.com>"]
edition = "2021"

[dependencies]
ast-grep-core = { version = "0.4.1", path = "../crates/core" }
ast-grep-config = { version = "0.4.1", path = "../crates/config" }
ast-grep-language = { version = "0.4.1", path = "../crates/language" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sg"
path = "src/sg_benchmark.rs"
harness = false
