[package]
publish = false
name = "benches"

authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true
ast-grep-language.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sg"
path = "src/sg_benchmark.rs"
harness = false
