[package]
publish = false
name = "xtask"
version = "0.0.0"

authors.workspace = true
edition.workspace = true

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true

anyhow.workspace = true
serde_json = { version = "1.0.114", features = ["preserve_order"] }
toml_edit = "0.22.6"
schemars.workspace = true