[package]
name = "ast-grep-config"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["regex"]

[dependencies]
ast-grep-core.workspace = true

anyhow.workspace = true
bit-set.workspace = true
globset = "0.4.14"
regex = { workspace = true, optional = true }
serde.workspace = true
serde_yaml = "0.9.27"
thiserror.workspace = true
schemars.workspace = true

[dev-dependencies]
tempdir = "0.3"
tree-sitter-typescript = "0.20.3"