[package]
name = "ast-grep-core"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]
categories = ["command-line-utilities", "development-tools", "parsing"]

authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bit-set = "0.5.3"
regex = { version = "1.8.1", optional = true }
thiserror = "1.0.40"
tree-sitter = { version = "0.9.1", package = "tree-sitter-facade-sg" }

[features]
default = ["regex"]

[dev-dependencies]
tree-sitter-typescript = "0.20.2"
