[package]
name = "ast-grep-core"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]
categories = ["command-line-utilities", "development-tools", "parsing"]

authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bit-set.workspace = true
lru = "0.12"
regex.workspace = true
smallvec = { version = "1", features = ["union"] }
thiserror.workspace = true
tree-sitter = { workspace = true, optional = true }

[features]
default = ["tree-sitter"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tree-sitter-typescript = "0.23.2"

[[bench]]
name = "search_perf"
harness = false