[package]
name = "ast-grep-dynamic"
description = "Load tree-sitter dynamic library for ast-grep"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ahash.workspace = true
ast-grep-core = { workspace = true, features = ["tree-sitter"] }

ignore.workspace = true
libloading = "0.8.3"
serde.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
target-triple = "0.1.4"

[dev-dependencies]
serde_yaml.workspace = true