[package]
name = "ast-grep-language"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ast-grep-core.workspace = true

ignore.workspace = true
serde.workspace = true

tree-sitter-bash = { version = "0.21.0", optional = true }
tree-sitter-c = { version = "0.21.0", optional = true }
tree-sitter-cpp = { version = "0.22.0", optional = true }
tree-sitter-c-sharp = { version = "0.21.1", optional = true }
tree-sitter-css = { version = "0.21.0", optional = true }
tree-sitter-dart= { version = "0.0.4", optional = true }
tree-sitter-elixir = { version = "0.2.0", optional = true }
tree-sitter-go = { version = "0.21.0", optional = true }
tree-sitter-html = { version = "0.20.3", optional = true }
tree-sitter-java = { version = "0.21.0", optional = true }
# https://github.com/tree-sitter/tree-sitter-javascript/issues/316
tree-sitter-javascript = { version = "0.21.2", optional = true, package="tree-sitter-javascript-sg" }
tree-sitter-json = { version = "0.21.0", optional = true }
# TODO https://github.com/fwcd/tree-sitter-kotlin/issues/118
tree-sitter-kotlin = { version = "0.3.6", optional = true }
tree-sitter-lua = { version = "0.1.0", optional = true }
tree-sitter-php = { version = "0.22.4", optional = true }
tree-sitter-python = { version = "0.21.0", optional = true }
tree-sitter-ruby = { version = "0.21.0", optional = true }
tree-sitter-rust = { version = "0.21.2", optional = true }
tree-sitter-scala = { version = "0.21.0", optional = true }
tree-sitter-swift = { version = "=0.4.2", optional = true }
tree-sitter-typescript= { version = "0.21.1", optional = true }

[features]
builtin-parser = [
  "tree-sitter-bash",
  "tree-sitter-c",
  "tree-sitter-cpp",
  "tree-sitter-c-sharp",
  "tree-sitter-css",
  "tree-sitter-dart",
  "tree-sitter-elixir",
  "tree-sitter-go",
  "tree-sitter-html",
  "tree-sitter-java",
  "tree-sitter-javascript",
  "tree-sitter-json",
  "tree-sitter-kotlin",
  "tree-sitter-lua",
  "tree-sitter-php",
  "tree-sitter-python",
  "tree-sitter-ruby",
  "tree-sitter-rust",
  "tree-sitter-scala",
  "tree-sitter-swift",
  "tree-sitter-typescript",
]
default = ["builtin-parser"]