[package]
name = "ast-grep-language"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ast-grep-core = { workspace = true, features = ["tree-sitter"] }

ignore.workspace = true
serde.workspace = true
tree-sitter.workspace = true

tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-cpp = { version = "0.23.0", optional = true }
tree-sitter-c-sharp = { version = "0.23.0", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.0", optional = true }
tree-sitter-elixir = { version = "0.3.0", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-haskell = { version = "0.23.0", optional = true }
tree-sitter-html = { version = "0.23.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-java = { version = "0.23.0", optional = true }
tree-sitter-json = { version = "0.23.0", optional = true }
tree-sitter-kotlin = { version = "0.4.0", optional = true, package = "tree-sitter-kotlin-sg" }
tree-sitter-lua = { version = "0.2.0", optional = true }
tree-sitter-nix = { version = "0.3.0", optional = true }
tree-sitter-php = { version = "0.24.0", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-ruby = { version = "0.23.0", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-solidity = { version = "1.2.11", optional = true }
tree-sitter-swift = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.0", optional = true }
tree-sitter-hcl = { version = "1.1.0", optional = true }

[features]
# Individual language features - enable specific languages
lang-bash = ["tree-sitter-bash"]
lang-c = ["tree-sitter-c"]
lang-cpp = ["tree-sitter-cpp"]
lang-csharp = ["tree-sitter-c-sharp"]
lang-css = ["tree-sitter-css"]
lang-elixir = ["tree-sitter-elixir"]
lang-go = ["tree-sitter-go"]
lang-haskell = ["tree-sitter-haskell"]
lang-hcl = ["tree-sitter-hcl"]
lang-html = ["tree-sitter-html"]
lang-java = ["tree-sitter-java"]
lang-javascript = ["tree-sitter-javascript"]
lang-json = ["tree-sitter-json"]
lang-kotlin = ["tree-sitter-kotlin"]
lang-lua = ["tree-sitter-lua"]
lang-nix = ["tree-sitter-nix"]
lang-php = ["tree-sitter-php"]
lang-python = ["tree-sitter-python"]
lang-ruby = ["tree-sitter-ruby"]
lang-rust = ["tree-sitter-rust"]
lang-scala = ["tree-sitter-scala"]
lang-solidity = ["tree-sitter-solidity"]
lang-swift = ["tree-sitter-swift"]
lang-typescript = ["tree-sitter-typescript"]
lang-yaml = ["tree-sitter-yaml"]

# Meta feature that enables all built-in languages
builtin-parser = [
  "lang-bash",
  "lang-c",
  "lang-cpp",
  "lang-csharp",
  "lang-css",
  "lang-elixir",
  "lang-go",
  "lang-haskell",
  "lang-hcl",
  "lang-html",
  "lang-java",
  "lang-javascript",
  "lang-json",
  "lang-kotlin",
  "lang-lua",
  "lang-nix",
  "lang-php",
  "lang-python",
  "lang-ruby",
  "lang-rust",
  "lang-scala",
  "lang-solidity",
  "lang-swift",
  "lang-typescript",
  "lang-yaml",
]

# NAPI language subset for Node.js bindings
napi-lang = [
  "lang-css",
  "lang-html",
  "lang-javascript",
  "lang-typescript",
]

default = ["builtin-parser"]