[package]
name = "ast-grep-lsp"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true

dashmap = "5.4.0"
serde.workspace = true
serde_json = "1.0.97"
tower-lsp = "0.19.0"
