[package]
name = "ast-grep-lsp"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = [
  "ast",
  "pattern",
  "codemod",
  "search",
  "rewrite",
]

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true
serde.workspace = true

serde_json = "1.0.116"
dashmap = "5.5.3"
tower-lsp = "0.20.0"

[dev-dependencies]
ast-grep-language.workspace = true
tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
] }
