[package]
name = "ast-grep-lsp"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = [
  "ast",
  "pattern",
  "codemod",
  "search",
  "rewrite",
]

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true
serde.workspace = true
dashmap.workspace = true

serde_json = "1.0.116"
tower-lsp-server = "0.21.1"
anyhow.workspace = true

[dev-dependencies]
ast-grep-language.workspace = true
futures = "0.3.31"
tokio = { version = "1.45.0", features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
  "macros",
  "time",
] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
