[package]
name = "ast-grep-napi"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true

napi = { version = "2.16.4", features = ["serde-json", "napi4", "error_anyhow"] }
napi-derive = "2.16.3"

ignore.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript="0.20.5"
tree-sitter-html = "0.20.0"
tree-sitter-javascript = "0.20.4"
tree-sitter-css = "0.20.0"
serde_json = "1.0.116"

[features]
# this feature is only for cargo test to avoid napi_ symbol undefined error
# see also napi-rs/napi-rs#1005, napi-rs/napi-rs#1099 and napi-rs/napi-rs#1032
napi-noop-in-unit-test = ["napi-derive/noop"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.1.3"