[package]
name = "ast-grep-pyo3"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ast_grep_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", optional = true }