[package]
name = "ast-grep-pyo3"
description = "Search and Rewrite code at large scale using precise AST pattern"
keywords = ["ast", "pattern", "codemod", "search", "rewrite"]

authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ast_grep_pyo3"
crate-type = ["cdylib"]

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true
ast-grep-language.workspace = true
anyhow.workspace = true
pyo3 = { version = "0.20.0", optional = true, features = ["anyhow"] }
pythonize = { version = "0.20.0", optional = true }

# uncomment default features when developing pyo3
[features]
# default = ["python"]
python = ["pythonize", "pyo3", "pyo3/extension-module"]