[package]
name = "ast-grep-wasm"
edition = "2021"
description = "WebAssembly bindings for ast-grep"
license = "MIT"
authors = ["Mo Mohebifar <mo@codemod.com>"]
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ast-grep-core = { path = "../core" }
ast-grep-language = { path = "../language", features = ["wasm-lang"], default-features = false  }
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[build-dependencies]
cc = "1.0"

# Enable the wee_alloc feature for smaller code size
[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]
exhaustive-parser = []

[dependencies.wee_alloc]
version = "0.4.5"
optional = true
