[package]
name = "ast-grep-wasm"
edition = "2021"
description = "WebAssembly bindings for ast-grep"
license = "MIT"
authors = ["Mohamad Mohebifar <mo@codemod.com>"]
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ast-grep-core.workspace = true
ast-grep-config.workspace = true
ast-grep-language = { path = "../language", default-features = false }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
thiserror.workspace = true
tree-sitter.workspace = true
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.50"

[build-dependencies]
cc = "1.0"

# Enable the wee_alloc feature for smaller code size
[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]
exhaustive-lang = ["ast-grep-language/wasm-exhaustive-lang"]
small-lang = ["ast-grep-language/wasm-lang"]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true
